# openclaw-wizard

./: .gitignore  LICENSE  README.md  dev.mjs  install.sh  setup.sh
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/api-specs/: phase-06-openapi.yaml
.planning/phases/05-ssh-remote-setup/: 05-03-SUMMARY.md
.planning/phases/06-docker-skills-management/: 06-01-SUMMARY.md  06-02-SUMMARY.md  06-03-SUMMARY.md  06-04-SUMMARY.md  06-05-SUMMARY.md
.planning/phases/08-intelligence-multi-server/: 08-01-SUMMARY.md  08-02-SUMMARY.md  08-03-SUMMARY.md  08-04-SUMMARY.md  08-05-SUMMARY.md  08-VERIFICATION.md
.planning/quick/1-add-upgrade-openclaw-feature-to-dashboar/: 1-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/ui-specs/: phase-05-screens.md  phase-06-screens.md
backend/: Cargo.toml
backend/bindings/: ApiKeyValidationRequest.ts  ApiKeyValidationResponse.ts  ChannelConfig.ts  ChannelHealth.ts  ChannelValidationRequest.ts  ChannelValidationResponse.ts  CommandOutput.ts  ContainerInfo.ts  ContainerLogsResponse.ts  ContainerStatus.ts  CostAnalysis.ts  CostRecommendation.ts  DaemonActionResponse.ts  DaemonStatus.ts  DiagnosticCheck.ts  DockerCreateRequest.ts  DockerCreateResponse.ts  DockerStatusResponse.ts  DoctorReport.ts  EmptyResponse.ts  HealthSnapshot.ts  InstallProgress.ts  InstallRequest.ts  InstalledSkill.ts  LlmModelPricing.ts  LlmPricingResponse.ts  LogAnalysis.ts  LogAnalysisRequest.ts  LogLine.ts  LogsResponse.ts  MultiServerDeployRequest.ts  MultiServerProgress.ts  OpenClawDetection.ts  RemoteInstallRequest.ts  RemoteSetupProgress.ts  RequirementCheck.ts  RollbackResult.ts  RollbackStage.ts  ScanRequest.ts  ScanResult.ts  (+24 more)
backend/src/: error.rs  lib.rs  main.rs
backend/src/models/: mod.rs  types.rs
backend/src/routes/: api.rs  channels.rs  dashboard.rs  docker.rs  intelligence.rs  logs.rs  mod.rs  multi_server.rs  remote.rs  services.rs  skills.rs  wizard.rs  ws.rs
backend/src/services/: command.rs  config.rs  config_analyzer.rs  daemon.rs  detection.rs  docker.rs  doctor.rs  health.rs  installer.rs  log_analyzer.rs  log_service.rs  mod.rs  multi_server.rs  platform.rs  remote.rs  rollback.rs  security_auditor.rs  service_manager.rs  skills.rs  ssh.rs  uninstaller.rs  upgrader.rs  whatsapp.rs
backend/static/: index.html
backend/tests/: api_tests.rs  rollback_tests.rs
frontend/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  types
frontend/src/api/: client.ts  websocket.ts
frontend/src/config/: profileSteps.ts
frontend/src/data/: providers.ts
frontend/src/hooks/: useConfigAnalyzer.ts  useDaemonStatus.ts  useDockerSandbox.ts  useHealthMonitor.ts  useLogViewer.ts  useMultiServer.ts  useRemoteSetup.ts  useRollback.ts  useServiceManager.test.ts  useServiceManager.ts  useSkills.ts  useStreamingOutput.ts  (+2 more)
(+60 files in other folders)
