[package]
name = "openclaw-wizard"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = { version = "10", features = ["serde-compat"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
sysinfo = "0.32"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
