[package]
name = "openclaw-wizard"
version = "1.1.0"
edition = "2024"
description = "Visual setup wizard and management dashboard for OpenClaw"
license = "MIT"
repository = "https://github.com/openclaw/openclaw-wizard"
homepage = "https://github.com/openclaw/openclaw-wizard"
keywords = ["openclaw", "wizard", "setup", "dashboard"]
categories = ["command-line-utilities", "web-programming"]
readme = "../README.md"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = { version = "10", features = ["serde-compat"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
sysinfo = "0.32"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
openssh = "0.11"
keyring = { version = "3.6", features = ["apple-native", "linux-native"] }
regex = "1.11"
bollard = "0.20"
tar = "0.4"
flate2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
notify = "8.0"
open = "5"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
http-body-util = "0.1"
